<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.allSongs.AllSongsFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/playlist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/name_playlist"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/no_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:padding="15dp"
        android:text="@string/no_songs_found_in_this_playlist"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_songs_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playlist_name"
        android:layout_above="@+id/edit_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp" />

    <ImageView
        android:id="@+id/edit_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_edit_24"
        android:contentDescription="@string/edit_button"
        android:layout_toStartOf="@id/delete_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"/>

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_delete_24"
        android:contentDescription="@string/delete_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        app:tint="#F60808" />

</RelativeLayout>