<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.allSongs.AllSongsFragment"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/playlist_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/your_playlists"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/no_playlists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:padding="15dp"
        android:text="@string/oops_there_were_no_playlists_found"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_all_playlists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playlist_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:padding="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_playlist"
        android:text="@string/plus"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp" />

</RelativeLayout>