<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MusicPlayerActivity">

    <TextView
        android:id="@+id/song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:ellipsize="marquee"
        android:padding="20dp"
        android:singleLine="true"
        android:text="@string/title_of_the_song"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:id="@+id/cover_song"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/controls"
        android:src="@drawable/baseline_music_note_24"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/controls"
        android:padding="30dp">

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seek_bar" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_time"
            android:text="@string/_0_00"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_time"
            android:text="@string/_0_00"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total_time"
            android:padding="20dp"
            android:id="@+id/play_controls">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_skip_previous_24"
                android:layout_alignParentStart="true"
                android:id="@+id/previous"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_skip_next_24"
                android:layout_alignParentEnd="true"
                android:id="@+id/next"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_pause_circle_outline_24"
                android:layout_centerHorizontal="true"
                android:id="@+id/pause_play"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play_controls"
            android:padding="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/get_lyrics"
                android:text="@string/get_lyrics"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>